# EV_Market_Insight_From_Reddit

./: .gitignore  README.md  pyproject.toml
code/: run_ev_all.py  run_ev_other.py  run_ev_reddit.py
code/cache/embeddings/: 5a6df720_d2389aac26_0001e8cb4c903b1f49e80ee46f2d9a330222f719.npy  5a6df720_d2389aac26_0005a2a5f964674109153e3e894cd1b05e16891e.npy  5a6df720_d2389aac26_000c3a43f8621e2cbdb9a815e6601f6160ada134.npy  5a6df720_d2389aac26_000d3ada90d9bd362b61b24dba396a6e26181d33.npy  5a6df720_d2389aac26_0015e3446972315c3a4b2d0db52143684acd2a01.npy  5a6df720_d2389aac26_001f8bb5e5b625e95cbb78e0e9d9b71afd0ebfbe.npy  (+9565 more)
code/eda_outputs/: eda_subreddit_difference.csv  eda_topic_engagement.csv  eda_topic_merge_recommendations.csv  eda_topic_prevalence.csv  eda_topic_trends.csv  topic_labels_refined.csv
code/ev_bertopic/: __init__.py  pipeline.py  topic_analysis_pipeline.py  topic_extraction_pipeline.py
scripts/: run_ev_all_eda.py  run_ev_all_extract.py  run_ev_all_refine.py  run_ev_all_reload.py  run_ev_other_extract.py  run_ev_reddit_extract.py  run_market_funnel_analysis.py
src/ev_bertopic/: __init__.py  topic_explore_pipeline.py  topic_extract_pipeline.py  topic_extraction_pipeline.py  topic_llm_pipeline.py  topic_refine_pipeline.py
src/ev_funnel/: market_funnel_analyzer.py  market_funnel_analyzer_aligned.py  market_funnel_visualizer.py  market_funnel_visualizer_aligned.py  sample_csv_test.py  test_market_funnel_alignment.py  test_market_funnel_outputs.xlsx  test_market_funnel_topics.csv  visualization_Test.py
